listas no rodapé

--- a/pagina.html
+++ b/pagina.html
@@ -115,8 +115,20 @@ Everybody is on their knees like, "I really want to ride with you<br>
                 </article>
             </section>
             <footer>
-                <a href="mailto:raphaelfsg@gmail.com">Fala com o pae</a>
-                <a target="_blank"><--E-mail</a>
+                <ol class="contact_list">
+                    <li>
+                        <a href="https://github.com/raphaelfsg/aulas-html-css/blob/main/pagina.html" target="_blank">Código Fonte</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/raphaelfsg/" target="_blank">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=VUZ7V9NeCw4" target="_blank">Página do clipe no Youtube</a>
+                    </li>
+                    <li>
+                <a href="mailto:raphaelfsg@gmail.com" target="_blank">Fala com o pae no e-mail</a>
+                    </li>
+                    </ol>
             </footer>
         </body>
     </html>
