--- a/pagina.html
+++ b/pagina.html
@@ -9,7 +9,7 @@
 
         </head>
 
-        <body>
+        <body class="body">
             <header>
                 <h1 id="Title">Lyric World</h1>
             </header>
